--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Test</title>
+
+		<style>
+			* {
+				padding: 0%;
+				margin: 0%;
+			}
+		</style>
 	</head>
-	<body></body>
+	<body>
+		<div
+			style="
+				background-color: rgb(0, 0, 0);
+				height: 100vh;
+				width: 100%;
+				z-index: 100;
+				position: absolute;
+				opacity: 0.2;
+				display: none;
+			"
+		></div>
+		<h3>Hello World</h3>
+		<button>click me</button>
+	</body>
 
 	<script src="index.js"></script>
 </html>
